--- a/Aplicacion web/SimRend/SimRend/Views/DeclaracionGastos/Documentos.cshtml
+++ b/Aplicacion web/SimRend/SimRend/Views/DeclaracionGastos/Documentos.cshtml
@@ -233,7 +233,15 @@
                     indicadorDocumentosSeleccionados();
                     insertarAcciones(respuesta.estado, respuesta.estadoFinal);
 
-                }
+                },
+                error: function (XMLHttpRequest, textStatus, errorThrown)
+                {
+                    $('#title-alerta').text(textStatus);
+                    $('#body-alerta').text(errorThrown);
+                    var boton = '<button type="button" data-dismiss="modal" class="btn btn-danger tx-11 tx-uppercase pd-y-12 pd-x-25 tx-mont tx-medium mg-b-20">Aceptar</button>';
+                    $('#actions-alerta').empty().append(boton);
+                    $('#modal-alerta').modal('show');
+                } 
             });
         }
 
@@ -361,7 +369,15 @@
                         LeerParticipante();
                         indicadorDocumentosSeleccionados();
                     }
-                }
+                },
+                error: function (XMLHttpRequest, textStatus, errorThrown)
+                {
+                    $('#title-alerta').text(textStatus);
+                    $('#body-alerta').text(errorThrown);
+                    var boton = '<button type="button" data-dismiss="modal" class="btn btn-danger tx-11 tx-uppercase pd-y-12 pd-x-25 tx-mont tx-medium mg-b-20">Aceptar</button>';
+                    $('#actions-alerta').empty().append(boton);
+                    $('#modal-alerta').modal('show');
+                } 
             });
         });
 
@@ -435,7 +451,15 @@
                     $('#montoDocsSelecParticipante').text('$' + formatoNumero(montoDocsSelecParticipante));
                     $('#porcentDocsSelecParticipante').text(redondearDecimales(porcentajeDocsSelecParticipante, 2));
 
-                }
+                },
+                error: function (XMLHttpRequest, textStatus, errorThrown)
+                {
+                    $('#title-alerta').text(textStatus);
+                    $('#body-alerta').text(errorThrown);
+                    var boton = '<button type="button" data-dismiss="modal" class="btn btn-danger tx-11 tx-uppercase pd-y-12 pd-x-25 tx-mont tx-medium mg-b-20">Aceptar</button>';
+                    $('#actions-alerta').empty().append(boton);
+                    $('#modal-alerta').modal('show');
+                } 
             });
         }
 
@@ -456,7 +480,15 @@
                 success: function (respuesta)
                 {
                     window.location.href = '/DeclaracionGastos/VerDocumento';
-                }
+                },
+                error: function (XMLHttpRequest, textStatus, errorThrown)
+                {
+                    $('#title-alerta').text(textStatus);
+                    $('#body-alerta').text(errorThrown);
+                    var boton = '<button type="button" data-dismiss="modal" class="btn btn-danger tx-11 tx-uppercase pd-y-12 pd-x-25 tx-mont tx-medium mg-b-20">Aceptar</button>';
+                    $('#actions-alerta').empty().append(boton);
+                    $('#modal-alerta').modal('show');
+                } 
             });
         }
 
@@ -472,7 +504,15 @@
                 success: function (respuesta)
                 {
                     window.location.href = '/DeclaracionGastos/ActualizarDocumento';
-                }
+                },
+                error: function (XMLHttpRequest, textStatus, errorThrown)
+                {
+                    $('#title-alerta').text(textStatus);
+                    $('#body-alerta').text(errorThrown);
+                    var boton = '<button type="button" data-dismiss="modal" class="btn btn-danger tx-11 tx-uppercase pd-y-12 pd-x-25 tx-mont tx-medium mg-b-20">Aceptar</button>';
+                    $('#actions-alerta').empty().append(boton);
+                    $('#modal-alerta').modal('show');
+                } 
             });
         }
 
@@ -518,7 +558,15 @@
                     $('#title-informacion-eliminacion').text(respuesta.titulo);
                     $('#body-informacion-eliminacion').text(respuesta.msj);
                     $('#modal-informacion-eliminacion').modal('show');
-                }
+                },
+                error: function (XMLHttpRequest, textStatus, errorThrown)
+                {
+                    $('#title-alerta').text(textStatus);
+                    $('#body-alerta').text(errorThrown);
+                    var boton = '<button type="button" data-dismiss="modal" class="btn btn-danger tx-11 tx-uppercase pd-y-12 pd-x-25 tx-mont tx-medium mg-b-20">Aceptar</button>';
+                    $('#actions-alerta').empty().append(boton);
+                    $('#modal-alerta').modal('show');
+                } 
             });
         });
 
@@ -546,7 +594,15 @@
                     {
                         window.location.href = '/DeclaracionGastos/DocumentacionPersonas';
                     }
-                }
+                },
+                error: function (XMLHttpRequest, textStatus, errorThrown)
+                {
+                    $('#title-alerta').text(textStatus);
+                    $('#body-alerta').text(errorThrown);
+                    var boton = '<button type="button" data-dismiss="modal" class="btn btn-danger tx-11 tx-uppercase pd-y-12 pd-x-25 tx-mont tx-medium mg-b-20">Aceptar</button>';
+                    $('#actions-alerta').empty().append(boton);
+                    $('#modal-alerta').modal('show');
+                } 
             });
 
         }
@@ -598,7 +654,15 @@
                         $('#actions-alerta').empty().append(boton);
                         $('#modal-alerta').modal('show');
                     }
-                }
+                },
+                error: function (XMLHttpRequest, textStatus, errorThrown)
+                {
+                    $('#title-alerta').text(textStatus);
+                    $('#body-alerta').text(errorThrown);
+                    var boton = '<button type="button" data-dismiss="modal" class="btn btn-danger tx-11 tx-uppercase pd-y-12 pd-x-25 tx-mont tx-medium mg-b-20">Aceptar</button>';
+                    $('#actions-alerta').empty().append(boton);
+                    $('#modal-alerta').modal('show');
+                } 
             });
         }
 
