--- a/Aplicacion web/SimRend/SimRend/Views/Usuario/CrearUsuarioDirector.cshtml
+++ b/Aplicacion web/SimRend/SimRend/Views/Usuario/CrearUsuarioDirector.cshtml
@@ -159,7 +159,7 @@
 </div><!-- br-pagebody -->
 
 <!-- MODAL ELIMINAR PROCESO -->
-<div id="modal-alert" class="modal fade" data-backdrop="static" data-keyboard="false">
+<div id="modal-alerta" class="modal fade" data-backdrop="static" data-keyboard="false">
     <div class="modal-dialog modal-dialog-centered" role="document">
         <div class="modal-content tx-size-sm">
             <div class="modal-body tx-center pd-y-20 pd-x-20">
